force-app/main/default/objects/ROP_Number_Inventory__c/ROP_Number_Inventory__c.object-meta.xml
<CustomObject>
    <label>ROP Number Inventory</label>
    <nameField>
        <label>ROP Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ROP Number Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>