force-app/main/default/objects/ROP_Number_Inventory__c/fields/Register_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Register_DateTime__c</fullName>
    <description>This is the timestamp when this ROP Number has been registered.</description>
    <label>Register Date/Time</label>
    <type>DateTime</type>
</CustomField>