force-app/main/default/objects/ROP_Number_Inventory__c/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <formula>NOT(ISNULL( Register_DateTime__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered</label>
    <type>Checkbox</type>
</CustomField>