force-app/main/default/objects/ROP_Number_Inventory__c/fields/ROP_Number__c.field-meta.xml
<CustomField>
    <fullName>ROP_Number__c</fullName>
    <description>This field keeps the ROP Numbers. It also acts as the external key to prevent duplicate ROP Numbers in the system.</description>
    <externalId>true</externalId>
    <label>ROP Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>